<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.yeyint.datamanagement.presentation.createAccountView.CreateAccountViewModel.GenderType"/>
        <variable
            name="viewModel"
            type="com.yeyint.datamanagement.presentation.createAccountView.CreateAccountViewModel" />
        <variable
            name="crateActivity"
            type="com.yeyint.datamanagement.presentation.createAccountView.CreateAccountActivity" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:statusBarScrim="@android:color/transparent"
            android:layout_gravity="top"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_xxlarge"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/color_primary">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_almost_there"
                    android:fontFamily="@font/chivo_black"
                    android:textSize="@dimen/text_regular_3x" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/str_create_acc_desc"
                    android:fontFamily="@font/chivo_regular"
                    android:textSize="@dimen/text_regular_2x" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_mandatory"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/chivo_regular"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular_2x" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="@dimen/margin_medium_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_header">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/str_first_name"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/chivo_regular"
                    app:error="@{viewModel.firstNameValidator.error}"
                    android:text="@={viewModel.firstNameLD}"
                    android:hint="@string/str_enter_first_name"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/str_last_name"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/chivo_regular"
                    app:error="@{viewModel.lastNameValidator.error}"
                    android:text="@={viewModel.lastNameLD}"
                    android:hint="@string/str_enter_last_name"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/str_email_address"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_text"
                    app:error="@{viewModel.emailAddressValidator.error}"
                    android:text="@={viewModel.emailAddressLD}"
                    android:fontFamily="@font/chivo_regular"
                    android:hint="@string/str_email_hint"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/ll_dob"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rg_gender">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/text_regular"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:text="@string/str_date_of_birth"
                            android:fontFamily="@font/chivo_regular"/>
                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:error="@{viewModel.dobValidator.error}"
                            android:textSize="@dimen/text_regular_2x"
                            android:inputType="date"
                            android:textColor="@color/primary_text"
                            android:fontFamily="@font/chivo_regular"
                            android:text="@={viewModel.dobLD}"
                            android:hint="@string/str_date"/>
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rg_gender"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ll_dob"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/btn_radio"
                            android:button="@null"
                            android:textAlignment="center"
                            android:onClick="@{()->viewModel.setGender(GenderType.FEMALE)}"
                            android:checked="@{viewModel.genderLD.equals(GenderType.FEMALE)}"
                            android:text="@string/str_female"/>
                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@null"
                            android:onClick="@{()->viewModel.setGender(GenderType.MALE)}"
                            android:checked="@{viewModel.genderLD.equals(GenderType.MALE)}"
                            android:textAlignment="center"
                            android:background="@drawable/btn_radio"
                            android:text="@string/str_male"/>
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/str_nationality"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:inputType="text"
                    android:textColor="@color/primary_text"
                    app:error="@{viewModel.nationalityValidator.error}"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@={viewModel.nationalityLD}"
                    android:hint="@string/str_myanmar"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/str_country_of_resident"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:inputType="text"
                    android:textColor="@color/primary_text"
                    app:error="@{viewModel.countryOfResidentValidator.error}"
                    android:text="@={viewModel.countryOfResidentLD}"
                    android:fontFamily="@font/chivo_regular"
                    android:hint="@string/str_myanmar"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular"
                    android:inputType="phone"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/str_mobile_no_optional"
                    android:fontFamily="@font/chivo_regular"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/primary_text"
                    android:fontFamily="@font/chivo_regular"
                    app:error="@{viewModel.phoneValidator.error}"
                    android:text="@={viewModel.phoneNoLD}"
                    android:hint="@string/str_mobile_no"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_guitar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_header"
                app:layout_constraintBottom_toBottomOf="@id/ll_header"
                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintHeight_percent="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="bottom">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_create_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/btn_gradient"
            android:onClick="@{() -> crateActivity.onFormSubmit()}"
            android:clickable="true"
            android:focusable="true">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_create_my_account_now"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/chivo_regular"
                android:layout_margin="@dimen/margin_medium_2"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>